# HexaEngine

./: .editorconfig  .gitignore  CNAME  CodeMap1.dgml  Graph1.dgml  HexaEngine.sln  LICENSE.txt  README.md  architechture.html  index.html  install.html  manifest.json  t.txt  toc.html  toc.json
.github/: FUNDING.yml
App/: App.csproj  Program.cs  untitled.dae  untitled.glb
AssetsBundler/: Asset.cs  AssetBundle.cs  AssetsBundler.csproj  Program.cs  StreamExtensions.cs  openssl.crt
CrashReporter/: BindingsContext.cs  CrashReporter.csproj  CrashWindow.cs  Program.cs
D3D12Testing/: Application.cs  D3D12Testing.csproj  DX12App.cs  Globals.cs  Program.cs  Time.cs  Utils.cs
DirectXTex/: CMakeLists.txt  DirectXTex.cpp  DirectXTex.h
DirectXTex/DirectXTex/: DirectXTex.h
DirectXTexNet/: DirectXTexNet.cs  DirectXTexNet.csproj
DirectXTexNetImpl/: AssemblyInfo.cpp  DirectXTexNet.cpp  DirectXTexNet.h  DirectXTexNetImpl.vcxproj  DirectXTexNetImpl.vcxproj.filters  Stdafx.cpp  Stdafx.h
DiscordRPC/: DiscordGameSdk.cs  DiscordRPC.csproj  Plugin.cs  RpcClient.cs  WebhookClient.cs
Editor/: Editor.csproj  EditorConfig.cs  EditorRenderer.cs  EditorWindow.cs  ILLink.Descriptors.xml  Program.cs  imgui.ini
FontEditor/: App.xaml  App.xaml.cs  FontEditor.csproj  MainWindow.xaml  MainWindow.xaml.cs
FontTool/: FontFile.cs  FontTool.csproj  IConverter.cs  LegacyConverter.cs  LegacyFontFile.cs  Program.cs  StreamExtensions.cs
HexaAssetTool/: HexaAssetTool.csproj  Program.cs  openssl.key
HexaEngine.Analyzers/: AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  AvoidExpensiveOperationsInUpdateAnalyzer.cs  HexaEngine.Analyzers.csproj  IDisposableAnalyzer.cs  InputAnalyzer.cs  README.md  SceneAnalyzer.cs
HexaEngine.Analyzers.Annotations/: DisposeIgnoreAttribute.cs  DisposeIsCrucialAttribute.cs  HexaEngine.Analyzers.Annotations.csproj
HexaEngine.Analyzers.Tests/: AvoidExpensiveOperationsInUpdateAnalyzerTests.cs  HexaEngine.Analyzers.Tests.csproj  IDisposableAnalyzerTests.cs  InputAnalyzerTests.cs  SceneAnalyzerTests.cs
HexaEngine.Audio.Common/: AudioFormat.cs  HexaEngine.Audio.Common.csproj  WaveFormatEncoding.cs  WaveHeader.cs
HexaEngine.Base/: CMakeLists.txt
HexaEngine.Base/include/: common.h  crashpad.h
HexaEngine.Base/src/: crashpad.cpp
HexaEngine.Core/: Application.cs  Clipboard.cs  Config.cs  Constants.cs  Cursor.cs  DataType.cs  Dispatcher.cs  Display.cs  DisplayInfo.cs  DisplayMode.cs  DisplayOrientation.cs  DisplayPixelFormat.cs  DisposableBase.cs  EditorPlayState.cs  EventHandlers.cs  Extensions.cs  FodyWeavers.xml  Globals.cs  HexaEngine - Backup.Core.csproj  HexaEngine.Core.cd  HexaEngine.Core.csproj  IRenderDispatcher.cs  LeakTracer.cs  Paths.cs  RenderBackend.cs  Settings.cs  TaskHelper.cs  Time.cs  Utilities.cs  Utils.cs  Window.cs
HexaEngine.D3D11/: ComputePipeline.cs  D3D11BlendState.cs  D3D11Buffer.cs  D3D11CBVariableList.cs  D3D11ClassInstance.cs  D3D11ClassLinkage.cs  D3D11CombinedTex2D.cs  D3D11CommandBuffer.cs  D3D11CommandList.cs  D3D11ComputePipeline.cs  D3D11ComputePipelineState.cs  D3D11DepthStencilState.cs  D3D11DepthStencilView.cs  D3D11DescriptorRange.cs  D3D11DomainShader.cs  D3D11Exception.cs  D3D11Fence.cs  D3D11GPUProfiler.cs  D3D11GeometryShader.cs  D3D11GlobalResourceList.cs  D3D11GraphicsContext.cs  D3D11GraphicsContextBase.cs  D3D11GraphicsDevice.Async.cs  D3D11GraphicsDevice.cs  D3D11GraphicsPipeline.cs  D3D11GraphicsPipelineState.cs  D3D11HullShader.cs  D3D11InputLayout.cs  D3D11On12GraphicsDevice.cs  D3D11PixelShader.cs  D3D11Query.cs  D3D11RasterizerState.cs  D3D11RenderPass.cs  D3D11RenderTargetView.cs  D3D11ResouceBindingList.cs  D3D11SamplerState.cs  D3D11ShaderParameter.cs  D3D11ShaderParameterState.cs  D3D11ShaderResourceView.cs  D3D11Texture1D.cs  (+29 more)
HexaEngine.D3D12/: D3D12Buffer.cs  D3D12CommandQueue.cs  D3D12Exception.cs  D3D12GraphicsDevice.cs  D3D12GraphicsPipeline.cs  D3D12GraphicsPipelineState.cs  DXGIAdapterD3D12.cs  DXGISwapChain.cs  DeviceChildBase.cs  DisposableBase.cs  Globals.cs  Helper.cs  HexaEngine.D3D12.csproj  IncludeHandler.cs  PSOOutput.cs  ResultCode.cs  ShaderCompiler.cs  Utils.cs
HexaEngine.Daxa/: DaxaAdapter.cs  DaxaBuffer.cs  DaxaGraphicsDevice.cs  DisposableBase.cs  Globals.cs  HexaEngine.Daxa.csproj
HexaEngine.DirectXTex/: Blob.cs  CMSEFlags.cs  CNMAPFlags.cs  CPFlags.cs  CreateTexFlags.cs  DDSFlags.cs  DirectXTex.Enumerations.cs  DirectXTex.Structures.cs  DirectXTex.cs  FormatType.cs  HexaEngine.DirectXTex.csproj  IPropertyBag2.cs  IWICImagingFactory.cs  IWICMetadataQueryReader.cs  Image.cs  LibraryLoader.cs  Native.cs  README.md  Rect.cs  ScratchImage.cs  TGAFlags.cs  TexAlphaMode.cs  TexCompressFlags.cs  TexDimension.cs  TexFilterFlags.cs  TexFrFlags.cs  TexMetadata.cs  TexMiscFlags.cs  TexMiscFlags2.cs  TexPmAlphaFlags.cs  WICCodecs.cs  WICFlags.cs
HexaEngine.DirectXTex.Native/: CMakeLists.txt  HexaTexture.cpp  HexaTexture.h
HexaEngine.DirectXTex.Native/DirectXTex/: DirectXTex.h
HexaEngine.DirectXTex.Tests/: BlobMethods.cs  DDSHelperFunctions.cs  DXGIFormatUtilities.cs  Direct3D11Functions.cs  HexaEngine.DirectXTex.Tests.csproj  ImageIO.cs  MetadataIO.cs  MiscImageOperations.cs  NormalMapOperations.cs  ScratchImageInternal.cs  ScratchImageMethods.cs  TexMetadataMethods.cs  TextureUtils.cs  Usings.cs  WICUtilities.cs
HexaEngine.Dotnet/: DebugType.cs  Dotnet.cs  DotnetTemplate.cs  HexaEngine.Dotnet.csproj  ItemGroup.cs  PublishOptions.cs  Reference.cs  SlnCommand.cs
HexaEngine.TextEditor.Native/: CMakeLists.txt  HexaEditor.cpp  HexaEditor.h  cimgui.exp  cimgui.lib
HexaEngine.TextEditor.Native/ImGui/: cimgui.h
HexaEngine.TextEditor.Native/TextEditor/: TextEditor.cpp  TextEditor.h
cimguizmo/: .gitmodules  CMakeLists.txt  README.md  cimguizmo.cpp  cimguizmo.h
cimguizmo/ImGuizmo/: ImGuizmo.cpp
cimguizmo/generator/: cimguizmo_template.cpp  cimguizmo_template.h  generator.bat  generator.lua
cimguizmo/generator/output/: definitions.json  definitions.lua  structs_and_enums.json  structs_and_enums.lua
cimplot/: CMakeLists.txt
cimplot/generator/output/: definitions.lua
(+7439 files in other folders)
